--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="container">
-  <h1 class="mt-5">Mini Chat</h1>
+  <h1 class="mt-5">Mini Chat Integration</h1>
 
   <hr>
   <form action="" id="miFormulario">
