updating new version

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="container">
-  <h1 class="mt-5">Mini Chat Integration 1</h1>
+  <h1 class="mt-5">Chat</h1>
 
   <hr>
   <form action="" id="miFormulario">
@@ -39,7 +39,7 @@
   <!-- con este script conectamos nuestro FrontEnd con nuestro BackEnd-->
   <script>
     // const socket = io('http://localhost:3500');
-    const socket = io('https://react-socketsio.herokuapp.com/');
+    const socket = io('https://socialinked-app.herokuapp.com/');
     // referewncias al elementos del DOM
     const d = document;
     const formulario = d.querySelector('#miFormulario');
