--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,8 @@
   <!-- con este script conectamos nuestro FrontEnd con nuestro BackEnd-->
   <script>
     // const socket = io('http://localhost:3500');
-    const socket = io('https://socialinked-app.herokuapp.com/');
+    // const socket = io('https://socialinked-app.herokuapp.com/');
+    const socket = io('https://social-linked.netlify.app/');
     // referewncias al elementos del DOM
     const d = document;
     const formulario = d.querySelector('#miFormulario');
