--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
   <!-- con este script conectamos nuestro FrontEnd con nuestro BackEnd-->
   <script>
-    // const socket = io('http://localhost:3500');
+    // const socket = io('http://localhost:3500/');
     const socket = io('https://socialinked-app.herokuapp.com/');
     // referewncias al elementos del DOM
     const d = document;
